// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MantleRevOps's identify destination action: all fields 1`] = `
Object {
  "contacts": Array [
    Object {
      "email": "P%L*#Z]I@",
      "label": "P%L*#Z]I@",
      "name": "P%L*#Z]I@",
      "phone": "P%L*#Z]I@",
    },
  ],
  "customFields": Object {
    "testType": "P%L*#Z]I@",
  },
  "email": "faacogad@wazjanom.nr",
  "myshopifyDomain": "P%L*#Z]I@",
  "name": "P%L*#Z]I@",
  "platform": "shopify",
  "platformId": "P%L*#Z]I@",
  "platformPlanName": "P%L*#Z]I@",
}
`;

exports[`Testing snapshot for MantleRevOps's identify destination action: required fields 1`] = `
Object {
  "myshopifyDomain": "P%L*#Z]I@",
  "platform": "shopify",
  "platformId": "P%L*#Z]I@",
}
`;
